added attendee names and team names beneath team counters

--- a/index.html
+++ b/index.html
@@ -80,6 +80,15 @@
             <span class="team-count" id="powerCount">0</span>
           </div>
         </div>
+
+        <div class="attendee-list-section">
+          <h3>Checked-In Attendees</h3>
+          <ul id="attendeeList" class="attendee-list">
+            <li id="emptyAttendeeMessage" class="attendee-empty">
+              No attendees checked in yet.
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
 
